Fix backdrop-filter not working on iOS Safari
In the documentation navigation, the link children of the list items could not apply any backdrop-filter on Safari iOS. Before, it behaved like having display:contents; applied.

Side-effect: the backdrop is now taller on desktop-browsers, applying line-height: 22px;

--- a/css/layout.css
+++ b/css/layout.css
@@ -530,6 +530,7 @@ footer ul li {
     font-style:  italic;    
     letter-spacing: .2em;
     backdrop-filter:invert(20%);
+    display: inline-block; /* Fix backdrop-filter not working on iOS Safari */
     padding-left:10px;
     padding-right:  10px; 
     border-radius:5px;
